--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave&display=swap"
     rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap"
+    rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
